# multi_agent_ai

./: README.md  final_post.md  pyproject.toml
.circleci/: config.yml
src/multi_agent_ai/: crew.py  main.py
src/multi_agent_ai/config/: agents.yaml  tasks.yaml
tests/: test_multi_agent_ai.py
