[project]
name = "multi_agent_ai"
version = "0.1.0"
description = "multi_agent_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "pytest>=8.4.1",
]

[project.scripts]
multi_agent_ai = "multi_agent_ai.main:run"
run_crew = "multi_agent_ai.main:run"
train = "multi_agent_ai.main:train"
replay = "multi_agent_ai.main:replay"
test = "multi_agent_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
